--- a/utils/CMakeLists.txt
+++ b/utils/CMakeLists.txt
@@ -3,4 +3,4 @@ project(utils C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(utils main.c)
+add_executable(utils main.c config.h utils/utils.c utils/utils.h)
